Correct section ids

--- a/src/epub/text/act-4.xhtml
+++ b/src/epub/text/act-4.xhtml
@@ -11,7 +11,7 @@
 				<span epub:type="label">Act</span>
 				<span epub:type="ordinal z3998:roman">IV</span>
 			</h2>
-			<section id="scene-1-1" epub:type="chapter z3998:scene">
+			<section id="scene-4-1" epub:type="chapter z3998:scene">
 				<h3>
 					<span epub:type="label">Scene</span>
 					<span epub:type="ordinal z3998:roman">I</span>
@@ -195,7 +195,8 @@
 									</li>
 									<li>
 										<p>
-											<i epub:type="z3998:stage-direction">Choristers, singing.</i> <i epub:type="z3998:stage-direction">Music.</i>
+											<i epub:type="z3998:stage-direction">Choristers, singing.</i>
+											<i epub:type="z3998:stage-direction">Music.</i>
 										</p>
 									</li>
 									<li>
@@ -585,7 +586,7 @@
 					</tbody>
 				</table>
 			</section>
-			<section id="scene-1-2" epub:type="chapter z3998:scene">
+			<section id="scene-4-2" epub:type="chapter z3998:scene">
 				<h3>
 					<span epub:type="label">Scene</span>
 					<span epub:type="ordinal z3998:roman">II</span>
