[Editorial] correct letter case of personas; add semantics

--- a/src/epub/text/act-4.xhtml
+++ b/src/epub/text/act-4.xhtml
@@ -22,7 +22,7 @@
 						<tr>
 							<td/>
 							<td>
-								<i epub:type="z3998:stage-direction">Enter two Gentlemen, meeting one another.</i>
+								<i epub:type="z3998:stage-direction">Enter two <b epub:type="z3998:persona">Gentlemen</b>, meeting one another.</i>
 							</td>
 						</tr>
 						<tr>
@@ -201,27 +201,27 @@
 									</li>
 									<li>
 										<p>
-											<i epub:type="z3998:stage-direction">Mayor of London, bearing the mace. Then Garter, in his coat of arms, and on his head a gilt copper crown.</i>
+											<i epub:type="z3998:stage-direction">Mayor of London, bearing the mace. Then <b epub:type="z3998:persona">Garter</b>, in his coat of arms, and on his head a gilt copper crown.</i>
 										</p>
 									</li>
 									<li>
 										<p>
-											<i epub:type="z3998:stage-direction">Marquess Dorset, bearing a sceptre of gold, on his head a demi-coronal of gold. With him, SURREY, bearing the rod of silver with the dove, crowned with an earl's coronet. Collars of SS.</i>
+											<i epub:type="z3998:stage-direction">Marquess Dorset, bearing a sceptre of gold, on his head a demi-coronal of gold. With him, <b epub:type="z3998:persona">Surrey</b>, bearing the rod of silver with the dove, crowned with an earl's coronet. Collars of SS.</i>
 										</p>
 									</li>
 									<li>
 										<p>
-											<i epub:type="z3998:stage-direction">SUFFOLK, in his robe of estate, his coronet on his head, bearing a long white wand, as high-steward. With him, NORFOLK, with the rod of marshalship, a coronet on his head. Collars of SS.</i>
+											<i epub:type="z3998:stage-direction"><b epub:type="z3998:persona">Suffolk</b>, in his robe of estate, his coronet on his head, bearing a long white wand, as high-steward. With him, <b epub:type="z3998:persona">Norfolk</b>, with the rod of marshalship, a coronet on his head. Collars of SS.</i>
 										</p>
 									</li>
 									<li>
 										<p>
-											<i epub:type="z3998:stage-direction">A canopy borne by four of the Cinque-ports; under it, QUEEN ANNE in her robe; in her hair richly adorned with pearl, crowned. On each side her, the Bishops of London and Winchester.</i>
+											<i epub:type="z3998:stage-direction">A canopy borne by four of the Cinque-ports; under it, <b epub:type="z3998:persona">Queen Anne</b> in her robe; in her hair richly adorned with pearl, crowned. On each side her, the Bishops of London and Winchester.</i>
 										</p>
 									</li>
 									<li>
 										<p>
-											<i epub:type="z3998:stage-direction">The old Duchess of Norfolk, in a coronal of gold, wrought with flowers, bearing QUEEN ANNE's train.</i>
+											<i epub:type="z3998:stage-direction">The old Duchess of Norfolk, in a coronal of gold, wrought with flowers, bearing <b epub:type="z3998:persona">Queen Anne's</b> train.</i>
 										</p>
 									</li>
 									<li>
@@ -281,7 +281,7 @@
 							<td epub:type="z3998:persona">Second Gentleman</td>
 							<td epub:type="z3998:verse">
 								<p>
-									<span>Heaven bless thee! <i epub:type="z3998:stage-direction">Looking on QUEEN ANNE.</i></span>
+									<span>Heaven bless thee! <i epub:type="z3998:stage-direction">Looking on <b epub:type="z3998:persona">Queen Anne</b>.</i></span>
 									<br/>
 									<span>Thou hast the sweetest face I ever look'd on.</span>
 									<br/>
@@ -340,7 +340,7 @@
 						<tr>
 							<td/>
 							<td>
-								<i epub:type="z3998:stage-direction">Enter a third Gentleman.</i>
+								<i epub:type="z3998:stage-direction">Enter a third <b epub:type="z3998:persona">Gentleman</b>.</i>
 							</td>
 						</tr>
 						<tr>
@@ -597,15 +597,15 @@
 						<tr>
 							<td/>
 							<td>
-								<i epub:type="z3998:stage-direction">Enter KATHARINE, Dowager, sick; led between GRIFFITH, her gentleman usher, and PATIENCE, her woman.</i>
+								<i epub:type="z3998:stage-direction">Enter <b epub:type="z3998:persona">Katherine</b>, Dowager, sick; led between <b epub:type="z3998:persona">Griffith</b>, her gentleman usher, and <b epub:type="z3998:persona">Patience</b>, her woman.</i>
 							</td>
 						</tr>
 						<tr>
-							<td epub:type="z3998:persona">GRIFFITH</td>
+							<td epub:type="z3998:persona">Griffith</td>
 							<td>How does your grace?</td>
 						</tr>
 						<tr>
-							<td epub:type="z3998:persona">KATHARINE</td>
+							<td epub:type="z3998:persona">Katherine</td>
 							<td epub:type="z3998:verse">
 								<p>
 									<span>O Griffith, sick to death!</span>
@@ -623,7 +623,7 @@
 							</td>
 						</tr>
 						<tr>
-							<td epub:type="z3998:persona">GRIFFITH</td>
+							<td epub:type="z3998:persona">Griffith</td>
 							<td epub:type="z3998:verse">
 								<p>
 									<span>Yes, madam; but I think your grace,</span>
@@ -633,7 +633,7 @@
 							</td>
 						</tr>
 						<tr>
-							<td epub:type="z3998:persona">KATHARINE</td>
+							<td epub:type="z3998:persona">Katherine</td>
 							<td epub:type="z3998:verse">
 								<p>
 									<span>Prithee, good Griffith, tell me how he died:</span>
@@ -645,7 +645,7 @@
 							</td>
 						</tr>
 						<tr>
-							<td epub:type="z3998:persona">GRIFFITH</td>
+							<td epub:type="z3998:persona">Griffith</td>
 							<td epub:type="z3998:verse">
 								<p>
 									<span>Well, the voice goes, madam:</span>
@@ -663,11 +663,11 @@
 							</td>
 						</tr>
 						<tr>
-							<td epub:type="z3998:persona">KATHARINE</td>
+							<td epub:type="z3998:persona">Katherine</td>
 							<td>Alas, poor man!</td>
 						</tr>
 						<tr>
-							<td epub:type="z3998:persona">GRIFFITH</td>
+							<td epub:type="z3998:persona">Griffith</td>
 							<td epub:type="z3998:verse">
 								<p>
 									<span>At last, with easy roads, he came to Leicester,</span>
@@ -701,7 +701,7 @@
 							</td>
 						</tr>
 						<tr>
-							<td epub:type="z3998:persona">KATHARINE</td>
+							<td epub:type="z3998:persona">Katherine</td>
 							<td epub:type="z3998:verse">
 								<p>
 									<span>So may he rest; his faults lie gently on him!</span>
@@ -735,7 +735,7 @@
 							</td>
 						</tr>
 						<tr>
-							<td epub:type="z3998:persona">GRIFFITH</td>
+							<td epub:type="z3998:persona">Griffith</td>
 							<td epub:type="z3998:verse">
 								<p>
 									<span>Noble madam,</span>
@@ -749,7 +749,7 @@
 							</td>
 						</tr>
 						<tr>
-							<td epub:type="z3998:persona">KATHARINE</td>
+							<td epub:type="z3998:persona">Katherine</td>
 							<td epub:type="z3998:verse">
 								<p>
 									<span>Yes, good Griffith;</span>
@@ -759,7 +759,7 @@
 							</td>
 						</tr>
 						<tr>
-							<td epub:type="z3998:persona">GRIFFITH</td>
+							<td epub:type="z3998:persona">Griffith</td>
 							<td epub:type="z3998:verse">
 								<p>
 									<span>This cardinal,</span>
@@ -807,7 +807,7 @@
 							</td>
 						</tr>
 						<tr>
-							<td epub:type="z3998:persona">KATHARINE</td>
+							<td epub:type="z3998:persona">Katherine</td>
 							<td epub:type="z3998:verse">
 								<p>
 									<span>After my death I wish no other herald,</span>
@@ -837,7 +837,7 @@
 							</td>
 						</tr>
 						<tr>
-							<td epub:type="z3998:persona">GRIFFITH</td>
+							<td epub:type="z3998:persona">Griffith</td>
 							<td epub:type="z3998:verse">
 								<p>
 									<span>She is asleep: good wench, let's sit down quiet,</span>
@@ -853,7 +853,7 @@
 							</td>
 						</tr>
 						<tr>
-							<td epub:type="z3998:persona">KATHARINE</td>
+							<td epub:type="z3998:persona">Katherine</td>
 							<td epub:type="z3998:verse">
 								<p>
 									<span>Spirits of peace, where are ye? are ye all gone,</span>
@@ -863,11 +863,11 @@
 							</td>
 						</tr>
 						<tr>
-							<td epub:type="z3998:persona">GRIFFITH</td>
+							<td epub:type="z3998:persona">Griffith</td>
 							<td>Madam, we are here.</td>
 						</tr>
 						<tr>
-							<td epub:type="z3998:persona">KATHARINE</td>
+							<td epub:type="z3998:persona">Katherine</td>
 							<td epub:type="z3998:verse">
 								<p>
 									<span>It is not you I call for:</span>
@@ -877,11 +877,11 @@
 							</td>
 						</tr>
 						<tr>
-							<td epub:type="z3998:persona">GRIFFITH</td>
+							<td epub:type="z3998:persona">Griffith</td>
 							<td>None, madam.</td>
 						</tr>
 						<tr>
-							<td epub:type="z3998:persona">KATHARINE</td>
+							<td epub:type="z3998:persona">Katherine</td>
 							<td epub:type="z3998:verse">
 								<p>
 									<span>No? Saw you not, even now, a blessed troop</span>
@@ -899,7 +899,7 @@
 							</td>
 						</tr>
 						<tr>
-							<td epub:type="z3998:persona">GRIFFITH</td>
+							<td epub:type="z3998:persona">Griffith</td>
 							<td epub:type="z3998:verse">
 								<p>
 									<span>I am most joyful, madam, such good dreams</span>
@@ -909,7 +909,7 @@
 							</td>
 						</tr>
 						<tr>
-							<td epub:type="z3998:persona">KATHARINE</td>
+							<td epub:type="z3998:persona">Katherine</td>
 							<td epub:type="z3998:verse">
 								<p>
 									<span>Bid the music leave,</span>
@@ -919,7 +919,7 @@
 							</td>
 						</tr>
 						<tr>
-							<td epub:type="z3998:persona">PATIENCE</td>
+							<td epub:type="z3998:persona">Patience</td>
 							<td epub:type="z3998:verse">
 								<p>
 									<span>Do you note</span>
@@ -933,17 +933,17 @@
 							</td>
 						</tr>
 						<tr>
-							<td epub:type="z3998:persona">GRIFFITH</td>
+							<td epub:type="z3998:persona">Griffith</td>
 							<td>She is going, wench: pray, pray.</td>
 						</tr>
 						<tr>
-							<td epub:type="z3998:persona">PATIENCE</td>
+							<td epub:type="z3998:persona">Patience</td>
 							<td>Heaven comfort her!</td>
 						</tr>
 						<tr>
 							<td/>
 							<td>
-								<i epub:type="z3998:stage-direction">Enter a Messenger.</i>
+								<i epub:type="z3998:stage-direction">Enter a <b epub:type="z3998:persona">Messenger</b>.</i>
 							</td>
 						</tr>
 						<tr>
@@ -951,7 +951,7 @@
 							<td>An't like your grace,--</td>
 						</tr>
 						<tr>
-							<td epub:type="z3998:persona">KATHARINE</td>
+							<td epub:type="z3998:persona">Katherine</td>
 							<td epub:type="z3998:verse">
 								<p>
 									<span>You are a saucy fellow:</span>
@@ -961,7 +961,7 @@
 							</td>
 						</tr>
 						<tr>
-							<td epub:type="z3998:persona">GRIFFITH</td>
+							<td epub:type="z3998:persona">Griffith</td>
 							<td epub:type="z3998:verse">
 								<p>
 									<span>You are to blame,</span>
@@ -985,19 +985,19 @@
 							</td>
 						</tr>
 						<tr>
-							<td epub:type="z3998:persona">KATHARINE</td>
+							<td epub:type="z3998:persona">Katherine</td>
 							<td epub:type="z3998:verse">
 								<p>
 									<span>Admit him entrance, Griffith: but this fellow</span>
 									<br/>
-									<span>Let me ne'er see again. <i epub:type="z3998:stage-direction">Exeunt GRIFFITH and Messenger.</i></span>
+									<span>Let me ne'er see again. <i epub:type="z3998:stage-direction">Exeunt <b epub:type="z3998:persona">Griffith</b> and <b epub:type="z3998:persona">Messenger</b>.</i></span>
 								</p>
 							</td>
 						</tr>
 						<tr>
 							<td/>
 							<td>
-								<i epub:type="z3998:stage-direction">Re-enter GRIFFITH, with CAPUCIUS.</i>
+								<i epub:type="z3998:stage-direction">Re-enter <b epub:type="z3998:persona">Griffith</b>, with <b epub:type="z3998:persona">Capucius</b>.</i>
 							</td>
 						</tr>
 						<tr>
@@ -1013,11 +1013,11 @@
 							</td>
 						</tr>
 						<tr>
-							<td epub:type="z3998:persona">CAPUCIUS</td>
+							<td epub:type="z3998:persona">Capucius</td>
 							<td>Madam, the same; your servant.</td>
 						</tr>
 						<tr>
-							<td epub:type="z3998:persona">KATHARINE</td>
+							<td epub:type="z3998:persona">Katherine</td>
 							<td epub:type="z3998:verse">
 								<p>
 									<span>O, my lord,</span>
@@ -1031,7 +1031,7 @@
 							</td>
 						</tr>
 						<tr>
-							<td epub:type="z3998:persona">CAPUCIUS</td>
+							<td epub:type="z3998:persona">Capucius</td>
 							<td epub:type="z3998:verse">
 								<p>
 									<span>Noble lady,</span>
@@ -1049,7 +1049,7 @@
 							</td>
 						</tr>
 						<tr>
-							<td epub:type="z3998:persona">KATHARINE</td>
+							<td epub:type="z3998:persona">Katherine</td>
 							<td epub:type="z3998:verse">
 								<p>
 									<span>O my good lord, that comfort comes too late;</span>
@@ -1065,11 +1065,11 @@
 							</td>
 						</tr>
 						<tr>
-							<td epub:type="z3998:persona">CAPUCIUS</td>
+							<td epub:type="z3998:persona">Capucius</td>
 							<td>Madam, in good health.</td>
 						</tr>
 						<tr>
-							<td epub:type="z3998:persona">KATHARINE</td>
+							<td epub:type="z3998:persona">Katherine</td>
 							<td epub:type="z3998:verse">
 								<p>
 									<span>So may he ever do! and ever flourish,</span>
@@ -1083,11 +1083,11 @@
 							</td>
 						</tr>
 						<tr>
-							<td epub:type="z3998:persona">PATIENCE</td>
-							<td>No, madam. <i epub:type="z3998:stage-direction">Giving it to KATHARINE.</i></td>
+							<td epub:type="z3998:persona">Patience</td>
+							<td>No, madam. <i epub:type="z3998:stage-direction">Giving it to <b epub:type="z3998:persona">Katherine</b>.</i></td>
 						</tr>
 						<tr>
-							<td epub:type="z3998:persona">KATHARINE</td>
+							<td epub:type="z3998:persona">Katherine</td>
 							<td epub:type="z3998:verse">
 								<p>
 									<span>Sir, I most humbly pray you to deliver</span>
@@ -1097,11 +1097,11 @@
 							</td>
 						</tr>
 						<tr>
-							<td epub:type="z3998:persona">CAPUCIUS</td>
+							<td epub:type="z3998:persona">Capucius</td>
 							<td>Most willing, madam.</td>
 						</tr>
 						<tr>
-							<td epub:type="z3998:persona">KATHARINE</td>
+							<td epub:type="z3998:persona">Katherine</td>
 							<td epub:type="z3998:verse">
 								<p>
 									<span>In which I have commended to his goodness</span>
@@ -1163,7 +1163,7 @@
 							</td>
 						</tr>
 						<tr>
-							<td epub:type="z3998:persona">CAPUCIUS</td>
+							<td epub:type="z3998:persona">Capucius</td>
 							<td epub:type="z3998:verse">
 								<p>
 									<span>By heaven, I will,</span>
@@ -1173,7 +1173,7 @@
 							</td>
 						</tr>
 						<tr>
-							<td epub:type="z3998:persona">KATHARINE</td>
+							<td epub:type="z3998:persona">Katherine</td>
 							<td epub:type="z3998:verse">
 								<p>
 									<span>I thank you, honest lord. Remember me</span>
@@ -1202,7 +1202,7 @@
 									<br/>
 									<span>A queen, and daughter to a king, inter me.</span>
 									<br/>
-									<span>I can no more. <i epub:type="z3998:stage-direction">Exeunt, leading KATHARINE.</i></span>
+									<span>I can no more. <i epub:type="z3998:stage-direction">Exeunt, leading <b epub:type="z3998:persona">Katherine</b>.</i></span>
 								</p>
 							</td>
 						</tr>
