--- a/src/epub/text/act-4.xhtml
+++ b/src/epub/text/act-4.xhtml
@@ -27,7 +27,7 @@
 						</tr>
 						<tr>
 							<td epub:type="z3998:persona">First Gentleman</td>
-							<td>You're well met once again.</td>
+							<td>You’re well met once again.</td>
 						</tr>
 						<tr>
 							<td epub:type="z3998:persona">Second Gentleman</td>
@@ -47,7 +47,7 @@
 							<td epub:type="z3998:persona">Second Gentleman</td>
 							<td epub:type="z3998:verse">
 								<p>
-									<span>'Tis all my business. At our last encounter,</span>
+									<span>’Tis all my business. At our last encounter,</span>
 									<br/>
 									<span>The Duke of Buckingham came from his trial.</span>
 								</p>
@@ -57,7 +57,7 @@
 							<td epub:type="z3998:persona">First Gentleman</td>
 							<td epub:type="z3998:verse">
 								<p>
-									<span>'Tis very true: but that time offer'd sorrow;</span>
+									<span>’Tis very true: but that time offer’d sorrow;</span>
 									<br/>
 									<span>This, general joy.</span>
 								</p>
@@ -67,11 +67,11 @@
 							<td epub:type="z3998:persona">Second Gentleman</td>
 							<td epub:type="z3998:verse">
 								<p>
-									<span>'Tis well: the citizens,</span>
+									<span>’Tis well: the citizens,</span>
 									<br/>
-									<span>I am sure, have shown at full their royal minds--</span>
+									<span>I am sure, have shown at full their royal minds⁠—</span>
 									<br/>
-									<span>As, let 'em have their rights, they are ever forward--</span>
+									<span>As, let ’em have their rights, they are ever forward⁠—</span>
 									<br/>
 									<span>In celebration of this day with shows,</span>
 									<br/>
@@ -85,7 +85,7 @@
 								<p>
 									<span>Never greater,</span>
 									<br/>
-									<span>Nor, I'll assure you, better taken, sir.</span>
+									<span>Nor, I’ll assure you, better taken, sir.</span>
 								</p>
 							</td>
 						</tr>
@@ -103,7 +103,7 @@
 							<td epub:type="z3998:persona">First Gentleman</td>
 							<td epub:type="z3998:verse">
 								<p>
-									<span>Yes; 'tis the list</span>
+									<span>Yes; ’tis the list</span>
 									<br/>
 									<span>Of those that claim their offices this day</span>
 									<br/>
@@ -125,7 +125,7 @@
 									<br/>
 									<span>I should have been beholding to your paper.</span>
 									<br/>
-									<span>But, I beseech you, what's become of Katharine,</span>
+									<span>But, I beseech you, what’s become of Katharine,</span>
 									<br/>
 									<span>The princess dowager? how goes her business?</span>
 								</p>
@@ -145,11 +145,11 @@
 									<br/>
 									<span>From Ampthill where the princess lay; to which</span>
 									<br/>
-									<span>She was often cited by them, but appear'd not:</span>
+									<span>She was often cited by them, but appear’d not:</span>
 									<br/>
 									<span>And, to be short, for not appearance and</span>
 									<br/>
-									<span>The king's late scruple, by the main assent</span>
+									<span>The king’s late scruple, by the main assent</span>
 									<br/>
 									<span>Of all these learned men she was divorced,</span>
 									<br/>
@@ -206,7 +206,7 @@
 									</li>
 									<li>
 										<p>
-											<i epub:type="z3998:stage-direction">Marquess Dorset, bearing a sceptre of gold, on his head a demi-coronal of gold. With him, <b epub:type="z3998:persona">Surrey</b>, bearing the rod of silver with the dove, crowned with an earl's coronet. Collars of SS.</i>
+											<i epub:type="z3998:stage-direction">Marquess Dorset, bearing a sceptre of gold, on his head a demi-coronal of gold. With him, <b epub:type="z3998:persona">Surrey</b>, bearing the rod of silver with the dove, crowned with an earl’s coronet. Collars of SS.</i>
 										</p>
 									</li>
 									<li>
@@ -221,7 +221,7 @@
 									</li>
 									<li>
 										<p>
-											<i epub:type="z3998:stage-direction">The old Duchess of Norfolk, in a coronal of gold, wrought with flowers, bearing <b epub:type="z3998:persona">Queen Anne's</b> train.</i>
+											<i epub:type="z3998:stage-direction">The old Duchess of Norfolk, in a coronal of gold, wrought with flowers, bearing <b epub:type="z3998:persona">Queen Anne’s</b> train.</i>
 										</p>
 									</li>
 									<li>
@@ -241,7 +241,7 @@
 								<p>
 									<span>A royal train, believe me. These I know:</span>
 									<br/>
-									<span>Who's that that bears the sceptre?</span>
+									<span>Who’s that that bears the sceptre?</span>
 								</p>
 							</td>
 						</tr>
@@ -267,7 +267,7 @@
 						</tr>
 						<tr>
 							<td epub:type="z3998:persona">First Gentleman</td>
-							<td>'Tis the same: high-steward.</td>
+							<td>’Tis the same: high-steward.</td>
 						</tr>
 						<tr>
 							<td epub:type="z3998:persona">Second Gentleman</td>
@@ -283,7 +283,7 @@
 								<p>
 									<span>Heaven bless thee! <i epub:type="z3998:stage-direction">Looking on <b epub:type="z3998:persona">Queen Anne</b>.</i></span>
 									<br/>
-									<span>Thou hast the sweetest face I ever look'd on.</span>
+									<span>Thou hast the sweetest face I ever look’d on.</span>
 									<br/>
 									<span>Sir, as I have a soul, she is an angel;</span>
 									<br/>
@@ -351,7 +351,7 @@
 							<td epub:type="z3998:persona">Third Gentleman</td>
 							<td epub:type="z3998:verse">
 								<p>
-									<span>Among the crowd i' the Abbey; where a finger</span>
+									<span>Among the crowd i’ the Abbey; where a finger</span>
 									<br/>
 									<span>Could not be wedged in more: I am stifled</span>
 									<br/>
@@ -411,9 +411,9 @@
 									<br/>
 									<span>As the shrouds make at sea in a stiff tempest,</span>
 									<br/>
-									<span>As loud, and to as many tunes: hats, cloaks--</span>
+									<span>As loud, and to as many tunes: hats, cloaks⁠—</span>
 									<br/>
-									<span>Doublets, I think,--flew up; and had their faces</span>
+									<span>Doublets, I think⁠—flew up; and had their faces</span>
 									<br/>
 									<span>Been loose, this day they had been lost. Such joy</span>
 									<br/>
@@ -423,9 +423,9 @@
 									<br/>
 									<span>In the old time of war, would shake the press,</span>
 									<br/>
-									<span>And make 'em reel before 'em. No man living</span>
+									<span>And make ’em reel before ’em. No man living</span>
 									<br/>
-									<span>Could say 'This is my wife' there; all were woven</span>
+									<span>Could say ‘This is my wife’ there; all were woven</span>
 									<br/>
 									<span>So strangely in one piece.</span>
 								</p>
@@ -433,7 +433,7 @@
 						</tr>
 						<tr>
 							<td epub:type="z3998:persona">Second Gentleman</td>
-							<td>But, what follow'd?</td>
+							<td>But, what follow’d?</td>
 						</tr>
 						<tr>
 							<td epub:type="z3998:persona">Third Gentleman</td>
@@ -441,25 +441,25 @@
 								<p>
 									<span>At length her grace rose, and with modest paces</span>
 									<br/>
-									<span>Came to the altar; where she kneel'd, and saint-like</span>
+									<span>Came to the altar; where she kneel’d, and saint-like</span>
 									<br/>
-									<span>Cast her fair eyes to heaven and pray'd devoutly.</span>
+									<span>Cast her fair eyes to heaven and pray’d devoutly.</span>
 									<br/>
-									<span>Then rose again and bow'd her to the people:</span>
+									<span>Then rose again and bow’d her to the people:</span>
 									<br/>
 									<span>When by the Archbishop of Canterbury</span>
 									<br/>
 									<span>She had all the royal makings of a queen;</span>
 									<br/>
-									<span>As holy oil, Edward Confessor's crown,</span>
+									<span>As holy oil, Edward Confessor’s crown,</span>
 									<br/>
 									<span>The rod, and bird of peace, and all such emblems</span>
 									<br/>
-									<span>Laid nobly on her: which perform'd, the choir,</span>
+									<span>Laid nobly on her: which perform’d, the choir,</span>
 									<br/>
 									<span>With all the choicest music of the kingdom,</span>
 									<br/>
-									<span>Together sung 'Te Deum.' So she parted,</span>
+									<span>Together sung ‘Te Deum.’ So she parted,</span>
 									<br/>
 									<span>And with the same full state paced back again</span>
 									<br/>
@@ -473,11 +473,11 @@
 								<p>
 									<span>Sir,</span>
 									<br/>
-									<span>You must no more call it York-place, that's past;</span>
+									<span>You must no more call it York-place, that’s past;</span>
 									<br/>
-									<span>For, since the cardinal fell, that title's lost:</span>
+									<span>For, since the cardinal fell, that title’s lost:</span>
 									<br/>
-									<span>'Tis now the king's, and call'd Whitehall.</span>
+									<span>’Tis now the king’s, and call’d Whitehall.</span>
 								</p>
 							</td>
 						</tr>
@@ -487,7 +487,7 @@
 								<p>
 									<span>I know it;</span>
 									<br/>
-									<span>But 'tis so lately alter'd, that the old name</span>
+									<span>But ’tis so lately alter’d, that the old name</span>
 									<br/>
 									<span>Is fresh about me.</span>
 								</p>
@@ -509,7 +509,7 @@
 								<p>
 									<span>Stokesly and Gardiner; the one of Winchester,</span>
 									<br/>
-									<span>Newly preferr'd from the king's secretary,</span>
+									<span>Newly preferr’d from the king’s secretary,</span>
 									<br/>
 									<span>The other, London.</span>
 								</p>
@@ -521,7 +521,7 @@
 								<p>
 									<span>He of Winchester</span>
 									<br/>
-									<span>Is held no great good lover of the archbishop's,</span>
+									<span>Is held no great good lover of the archbishop’s,</span>
 									<br/>
 									<span>The virtuous Cranmer.</span>
 								</p>
@@ -553,7 +553,7 @@
 									<br/>
 									<span>A worthy friend. The king has made him master</span>
 									<br/>
-									<span>O' the jewel house,</span>
+									<span>O’ the jewel house,</span>
 									<br/>
 									<span>And one, already, of the privy council.</span>
 								</p>
@@ -575,7 +575,7 @@
 									<br/>
 									<span>Something I can command. As I walk thither,</span>
 									<br/>
-									<span>I'll tell ye more.</span>
+									<span>I’ll tell ye more.</span>
 								</p>
 							</td>
 						</tr>
@@ -616,7 +616,7 @@
 									<br/>
 									<span>So; now, methinks, I feel a little ease.</span>
 									<br/>
-									<span>Didst thou not tell me, Griffith, as thou led'st me,</span>
+									<span>Didst thou not tell me, Griffith, as thou led’st me,</span>
 									<br/>
 									<span>That the great child of honour, Cardinal Wolsey, Was dead?</span>
 								</p>
@@ -628,7 +628,7 @@
 								<p>
 									<span>Yes, madam; but I think your grace,</span>
 									<br/>
-									<span>Out of the pain you suffer'd, gave no ear to't.</span>
+									<span>Out of the pain you suffer’d, gave no ear to’t.</span>
 								</p>
 							</td>
 						</tr>
@@ -638,7 +638,7 @@
 								<p>
 									<span>Prithee, good Griffith, tell me how he died:</span>
 									<br/>
-									<span>If well, he stepp'd before me, happily</span>
+									<span>If well, he stepp’d before me, happily</span>
 									<br/>
 									<span>For my example.</span>
 								</p>
@@ -676,13 +676,13 @@
 									<br/>
 									<span>With all his covent, honourably received him;</span>
 									<br/>
-									<span>To whom he gave these words, 'O, father abbot,</span>
+									<span>To whom he gave these words, ‘O, father abbot,</span>
 									<br/>
 									<span>An old man, broken with the storms of state,</span>
 									<br/>
 									<span>Is come to lay his weary bones among ye;</span>
 									<br/>
-									<span>Give him a little earth for charity!'</span>
+									<span>Give him a little earth for charity!’</span>
 									<br/>
 									<span>So went to bed; where eagerly his sickness</span>
 									<br/>
@@ -716,7 +716,7 @@
 									<br/>
 									<span>Tied all the kingdom: simony was fair-play;</span>
 									<br/>
-									<span>His own opinion was his law: i' the presence</span>
+									<span>His own opinion was his law: i’ the presence</span>
 									<br/>
 									<span>He would say untruths; and be ever double</span>
 									<br/>
@@ -740,7 +740,7 @@
 								<p>
 									<span>Noble madam,</span>
 									<br/>
-									<span>Men's evil manners live in brass; their virtues</span>
+									<span>Men’s evil manners live in brass; their virtues</span>
 									<br/>
 									<span>We write in water. May it please your highness</span>
 									<br/>
@@ -766,7 +766,7 @@
 									<br/>
 									<span>Though from an humble stock, undoubtedly</span>
 									<br/>
-									<span>Was fashion'd to much honour from his cradle.</span>
+									<span>Was fashion’d to much honour from his cradle.</span>
 									<br/>
 									<span>He was a scholar, and a ripe and good one;</span>
 									<br/>
@@ -788,13 +788,13 @@
 									<br/>
 									<span>Unwilling to outlive the good that did it;</span>
 									<br/>
-									<span>The other, though unfinish'd, yet so famous,</span>
+									<span>The other, though unfinish’d, yet so famous,</span>
 									<br/>
 									<span>So excellent in art, and still so rising,</span>
 									<br/>
 									<span>That Christendom shall ever speak his virtue.</span>
 									<br/>
-									<span>His overthrow heap'd happiness upon him;</span>
+									<span>His overthrow heap’d happiness upon him;</span>
 									<br/>
 									<span>For then, and not till then, he felt himself,</span>
 									<br/>
@@ -840,7 +840,7 @@
 							<td epub:type="z3998:persona">Griffith</td>
 							<td epub:type="z3998:verse">
 								<p>
-									<span>She is asleep: good wench, let's sit down quiet,</span>
+									<span>She is asleep: good wench, let’s sit down quiet,</span>
 									<br/>
 									<span>For fear we wake her: softly, gentle Patience.</span>
 								</p>
@@ -924,7 +924,7 @@
 								<p>
 									<span>Do you note</span>
 									<br/>
-									<span>How much her grace is alter'd on the sudden?</span>
+									<span>How much her grace is alter’d on the sudden?</span>
 									<br/>
 									<span>How long her face is drawn? how pale she looks,</span>
 									<br/>
@@ -948,7 +948,7 @@
 						</tr>
 						<tr>
 							<td epub:type="z3998:persona">Messenger</td>
-							<td>An't like your grace,--</td>
+							<td>An’t like your grace⁠—</td>
 						</tr>
 						<tr>
 							<td epub:type="z3998:persona">Katherine</td>
@@ -976,7 +976,7 @@
 							<td epub:type="z3998:persona">Messenger</td>
 							<td epub:type="z3998:verse">
 								<p>
-									<span>I humbly do entreat your highness' pardon;</span>
+									<span>I humbly do entreat your highness’ pardon;</span>
 									<br/>
 									<span>My haste made me unmannerly. There is staying</span>
 									<br/>
@@ -990,7 +990,7 @@
 								<p>
 									<span>Admit him entrance, Griffith: but this fellow</span>
 									<br/>
-									<span>Let me ne'er see again. <i epub:type="z3998:stage-direction">Exeunt <b epub:type="z3998:persona">Griffith</b> and <b epub:type="z3998:persona">Messenger</b>.</i></span>
+									<span>Let me ne’er see again. <i epub:type="z3998:stage-direction">Exeunt <b epub:type="z3998:persona">Griffith</b> and <b epub:type="z3998:persona">Messenger</b>.</i></span>
 								</p>
 							</td>
 						</tr>
@@ -1022,7 +1022,7 @@
 								<p>
 									<span>O, my lord,</span>
 									<br/>
-									<span>The times and titles now are alter'd strangely</span>
+									<span>The times and titles now are alter’d strangely</span>
 									<br/>
 									<span>With me since first you knew me. But, I pray you,</span>
 									<br/>
@@ -1038,7 +1038,7 @@
 									<br/>
 									<span>First mine own service to your grace; the next,</span>
 									<br/>
-									<span>The king's request that I would visit you;</span>
+									<span>The king’s request that I would visit you;</span>
 									<br/>
 									<span>Who grieves much for your weakness, and by me</span>
 									<br/>
@@ -1054,7 +1054,7 @@
 								<p>
 									<span>O my good lord, that comfort comes too late;</span>
 									<br/>
-									<span>'Tis like a pardon after execution:</span>
+									<span>’Tis like a pardon after execution:</span>
 									<br/>
 									<span>That gentle physic, given in time, had cured me;</span>
 									<br/>
@@ -1076,7 +1076,7 @@
 									<br/>
 									<span>When I shal l dwell with worms, and my poor name</span>
 									<br/>
-									<span>Banish'd the kingdom! Patience, is that letter,</span>
+									<span>Banish’d the kingdom! Patience, is that letter,</span>
 									<br/>
 									<span>I caused you write, yet sent away?</span>
 								</p>
@@ -1110,13 +1110,13 @@
 									<br/>
 									<span>The dews of heaven fall thick in blessings on her!</span>
 									<br/>
-									<span>Beseeching him to give her virtuous breeding--</span>
+									<span>Beseeching him to give her virtuous breeding⁠—</span>
 									<br/>
 									<span>She is young, and of a noble modest nature,</span>
 									<br/>
-									<span>I hope she will deserve well,--and a little</span>
+									<span>I hope she will deserve well⁠—and a little</span>
 									<br/>
-									<span>To love her for her mother's sake, that loved him,</span>
+									<span>To love her for her mother’s sake, that loved him,</span>
 									<br/>
 									<span>Heaven knows how dearly. My next poor petition</span>
 									<br/>
@@ -1124,7 +1124,7 @@
 									<br/>
 									<span>Upon my wretched women, that so long</span>
 									<br/>
-									<span>Have follow'd both my fortunes faithfully:</span>
+									<span>Have follow’d both my fortunes faithfully:</span>
 									<br/>
 									<span>Of which there is not one, I dare avow,</span>
 									<br/>
@@ -1136,13 +1136,13 @@
 									<br/>
 									<span>A right good husband, let him be a noble</span>
 									<br/>
-									<span>And, sure, those men are happy that shall have 'em.</span>
+									<span>And, sure, those men are happy that shall have ’em.</span>
 									<br/>
 									<span>The last is, for my men; they are the poorest,</span>
 									<br/>
-									<span>But poverty could never draw 'em from me;</span>
+									<span>But poverty could never draw ’em from me;</span>
 									<br/>
-									<span>That they may have their wages duly paid 'em,</span>
+									<span>That they may have their wages duly paid ’em,</span>
 									<br/>
 									<span>And something over to remember me by:</span>
 									<br/>
@@ -1156,7 +1156,7 @@
 									<br/>
 									<span>As you wish Christian peace to souls departed,</span>
 									<br/>
-									<span>Stand these poor people's friend, and urge the king</span>
+									<span>Stand these poor people’s friend, and urge the king</span>
 									<br/>
 									<span>To do me this last right.</span>
 								</p>
@@ -1182,7 +1182,7 @@
 									<br/>
 									<span>Say his long trouble now is passing</span>
 									<br/>
-									<span>Out of this world; tell him, in death I bless'd him,</span>
+									<span>Out of this world; tell him, in death I bless’d him,</span>
 									<br/>
 									<span>For so I will. Mine eyes grow dim. Farewell,</span>
 									<br/>
@@ -1198,7 +1198,7 @@
 									<br/>
 									<span>I was a chaste wife to my grave: embalm me,</span>
 									<br/>
-									<span>Then lay me forth: although unqueen'd, yet like</span>
+									<span>Then lay me forth: although unqueen’d, yet like</span>
 									<br/>
 									<span>A queen, and daughter to a king, inter me.</span>
 									<br/>
