--- a/src/epub/text/prologue.xhtml
+++ b/src/epub/text/prologue.xhtml
@@ -36,7 +36,7 @@
 								<br/>
 								<span>The play may pass, if they be still and willing,</span>
 								<br/>
-								<span>I'll undertake may see away their shilling</span>
+								<span>I’ll undertake may see away their shilling</span>
 								<br/>
 								<span>Richly in two short hours. Only they</span>
 								<br/>
@@ -58,7 +58,7 @@
 								<br/>
 								<span>Will leave us never an understanding friend.</span>
 								<br/>
-								<span>Therefore, for goodness' sake, and as you are known</span>
+								<span>Therefore, for goodness’ sake, and as you are known</span>
 								<br/>
 								<span>The first and happiest hearers of the town,</span>
 								<br/>
@@ -68,13 +68,13 @@
 								<br/>
 								<span>As they were living; think you see them great,</span>
 								<br/>
-								<span>And follow'd with the general throng and sweat</span>
+								<span>And follow’d with the general throng and sweat</span>
 								<br/>
 								<span>Of thousand friends; then in a moment, see</span>
 								<br/>
 								<span>How soon this mightiness meets misery:</span>
 								<br/>
-								<span>And, if you can be merry then, I'll say</span>
+								<span>And, if you can be merry then, I’ll say</span>
 								<br/>
 								<span>A man may weep upon his wedding-day.</span>
 							</p>
