--- a/src/epub/text/epilogue.xhtml
+++ b/src/epub/text/epilogue.xhtml
@@ -14,33 +14,33 @@
 						<td/>
 						<td epub:type="z3998:verse">
 							<p>
-								<span>'Tis ten to one this play can never please</span>
+								<span>’Tis ten to one this play can never please</span>
 								<br/>
 								<span>All that are here: some come to take their ease,</span>
 								<br/>
 								<span>And sleep an act or two; but those, we fear,</span>
 								<br/>
-								<span>We have frighted with our trumpets; so, 'tis clear,</span>
+								<span>We have frighted with our trumpets; so, ’tis clear,</span>
 								<br/>
-								<span>They'll say 'tis naught: others, to hear the city</span>
+								<span>They’ll say ’tis naught: others, to hear the city</span>
 								<br/>
-								<span>Abused extremely, and to cry 'That's witty!'</span>
+								<span>Abused extremely, and to cry ‘That’s witty!’</span>
 								<br/>
 								<span>Which we have not done neither: that, I fear,</span>
 								<br/>
-								<span>All the expected good we're like to hear</span>
+								<span>All the expected good we’re like to hear</span>
 								<br/>
 								<span>For this play at this time, is only in</span>
 								<br/>
 								<span>The merciful construction of good women;</span>
 								<br/>
-								<span>For such a one we show'd 'em: if they smile,</span>
+								<span>For such a one we show’d ’em: if they smile,</span>
 								<br/>
-								<span>And say 'twill do, I know, within a while</span>
+								<span>And say ’twill do, I know, within a while</span>
 								<br/>
-								<span>All the best men are ours; for 'tis ill hap,</span>
+								<span>All the best men are ours; for ’tis ill hap,</span>
 								<br/>
-								<span>If they hold when their ladies bid 'em clap.</span>
+								<span>If they hold when their ladies bid ’em clap.</span>
 							</p>
 						</td>
 					</tr>
